--- a/cadastro.html
+++ b/cadastro.html
@@ -25,7 +25,7 @@
                         <input class="spaceInput" placeholder="Confirmar Senha" id="passwordB" type="password">                                                
                     </div> 
                     <div id="testando">
-                        <p class="invalid" id="invalid2">Senhas não podem ser divergentes!</p>
+                        <p class="invalid" id="invalid2">Usuário deve ter mais de 1 caractere e senhas não podem ser divergentes!</p>
                     </div>
                     <div class="space">
                         <button onclick="validate()" class="spaceInput btn"  id="send"> Cadastrar</button>
